# ros2_leg_detector

./: README.md
src/leg_detector/: CMakeLists.txt  package.xml
src/leg_detector/include/leg_detector/: cluster_features.h  laser_processor.h  trajectory_prediction.hpp
src/leg_detector/launch/: demo_stationary_simple_environment.launch.py
src/leg_detector/rosbag/demos/rviz/: demo_stationary_simple_environment.rviz
src/leg_detector/scripts/: joint_leg_tracker.py
src/leg_detector/src/: cluster_features.cpp  detect_leg_clusters.cpp  inflated_human_scan.cpp  laser_processor.cpp  local_occupancy_grid_mapping.cpp  trajectory_prediction.cpp
src/leg_detector_msgs/: CMakeLists.txt  package.xml
src/leg_detector_msgs/msg/: Leg.msg  PersonArray.msg  Trajectory.msg  TrajectoryArray.msg
src/leg_tracker_msgs/msg/: LegArray.msg  Person.msg
